@@ -1,3 +1,12 @@
+2012-06-23  Yuuichi Akagawa <Yuuichi.Akagawa@gmail.com>
+
+	* ADK_release_20120606
+        - AndroidAccessory/AndroidAccessory.cpp
+        - AndroidAccessory/AndroidAccessory.h
+
+        * Fix "Error: OSCOKIRQ failed to assert" on Mega ADK
+	- Adb/max3421e.cpp
+
 2012-06-05  Yuuichi Akagawa <Yuuichi.Akagawa@gmail.com>
 
 	* Arduino Leonardo support.
